añade responsividad a toda la pagina

--- a/servicios/validaciones.html
+++ b/servicios/validaciones.html
@@ -16,25 +16,33 @@
     <i class="fa-brands fa-whatsapp"></i>	</a>
 
     <header class="header">
-        <nav class="menu">
-            <a href="../index.html"><img class="logo"  src="../assets/logo.png" alt="logo gestoría"></a>
+      <nav class="menu">
+        <div class="navContainer">  
+          <a href="../index.html"><img class="logo"  src="../assets/logo.png" alt="logo gestoría"></a>
                 <div class="menuNavegacion">
-                    <a class="menuLink" href="../index.html">Inicio</a>
-                    <a class="menuLink" href="../nosotros.html">Nosotros</a>
-                    <div class=listaServicios>
-                        <a class="menuLink" href="../servicios.html">Servicios</a>
-                        <ul class="menuLinkServiciosDropdown">
-                            <li><a href="../servicios/descuentosInfracciones.html" class="listaServiciosMenu">Descuentos en infracciones</a></li>
-                            <li><a href="../servicios/dotacionPlacas.html" class="listaServiciosMenu">Dotación de placas</a></li>
-                            <li><a href="../servicios/validaciones.html" class="listaServiciosMenu">Validaciones</a></li>
-                            <li><a href="../servicios/bajasTotales.html" class="listaServiciosMenu">Bajas totales</a></li>
-                            <li><a href="../servicios/cambioPropietario.html" class="listaServiciosMenu">Cambio de propietario</a></li>
-                        </ul>
-                </div>
+                    <div class="centrarMenuResponsive">
+                      <a class="menuLink" href="../index.html">Inicio</a>
+                      <a class="menuLink" href="../nosotros.html">Nosotros</a>
+                      <div class=listaServicios>
+                          <a class="menuLink" href="../servicios.html">Servicios</a>
+                          <ul class="menuLinkServiciosDropdown">
+                              <li><a href="../servicios/descuentosInfracciones.html" class="listaServiciosMenu">Descuentos en infracciones</a></li>
+                              <li><a href="../servicios/dotacionPlacas.html" class="listaServiciosMenu">Dotación de placas</a></li>
+                              <li><a href="../servicios/validaciones.html" class="listaServiciosMenu">Validaciones</a></li>
+                              <li><a href="../servicios/bajasTotales.html" class="listaServiciosMenu">Bajas totales</a></li>
+                              <li><a href="../servicios/cambioPropietario.html" class="listaServiciosMenu">Cambio de propietario</a></li>
+                          </ul>
+                  </div>
                 <a class="menuLink" href="../contacto.html">Contacto</a>
-            </div>
-            </nav>
-    </header>
+              </div>
+        </div>
+          <div class="burger" aria-label="Abrir menu de navegacion">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+      </nav>
+  </header>
     <div class="header-spacer"></div>
     <main>
       <section class="SeccionInformacionServicio" id="SeccionInformacionServicioValidaciones">
@@ -205,13 +213,11 @@
           </div>
         </div>
         <iframe class="ubicacionMapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3731.596121229228!2d-103.3797142!3d20.7266189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428af3b07af556f%3A0x283e5acf37ac9722!2sSantos%20Gestoria%20Automotriz!5e0!3m2!1ses!2smx!4v1743642046136!5m2!1ses!2smx" width="450" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+        <iframe class="ubicacionMapa" id="ubicacionMapaMobile" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3731.596121229228!2d-103.3797142!3d20.7266189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428af3b07af556f%3A0x283e5acf37ac9722!2sSantos%20Gestoria%20Automotriz!5e0!3m2!1ses!2smx!4v1743642046136!5m2!1ses!2smx" width="300" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
       <div class="copyrightField">
         <p class="textoCopyright"> <strong>Copyright</strong> © 2025 Santos Gestoría | <a href="../avisoPrivacidad.html" class="linkCopyright">Aviso de Privacidad</a> | Usted está sujeto a la <a href="https://policies.google.com/privacy" class="linkCopyright">Política de Privacidad</a> y los <a href="https://policies.google.com/terms" class="linkCopyright">Términos del Servicio de Google</a>.</p>      </div>
-      </div>
 </footer>
-
-
 </main>
 <script src="../app.js" defer></script>
 </body>
