arregla secciones y añade enlaces a rrss

--- a/servicios/descuentosInfracciones.html
+++ b/servicios/descuentosInfracciones.html
@@ -121,8 +121,8 @@
               <h2 class="textoRedes">Síguenos en:</h2>
 
               <div>
-                <img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo">
-                <img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo">
+                <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
               </div>
               
           </div>
@@ -133,6 +133,7 @@
       <div class="copyrightField">
         <p class="textoCopyright"> <strong>Copyright</strong> © 2025 Santos Gestoría | <a href="../avisoPrivacidad.html" class="linkCopyright">Aviso de Privacidad</a> | Usted está sujeto a la <a href="https://policies.google.com/privacy" class="linkCopyright">Política de Privacidad</a> y los <a href="https://policies.google.com/terms" class="linkCopyright">Términos del Servicio de Google</a>.</p>      </div>
 </footer>
+
 </main>
 <script src="../app.js" defer></script>
 </body>
