--- a/servicios/licenciaC1D1.html
+++ b/servicios/licenciaC1D1.html
@@ -83,6 +83,7 @@
             </section>
     </main>
 
+
     <footer class="footer">
       <div class="contenidoFooter">
         <div class="informacionFooter">                    
@@ -135,8 +136,8 @@
               <h2 class="textoRedes">Síguenos en:</h2>
 
               <div>
-                <img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo">
-                <img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo">
+                <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
               </div>
               
           </div>
