--- a/servicios/refacturacion.html
+++ b/servicios/refacturacion.html
@@ -53,7 +53,7 @@
           <h2 class="subtituloInformacionServicio">Refacturación</h2>
           <ul class="descripcionInformacionServicio"> <li class="listaSeparador">Tramitamos la refacturación de tu vehículo y otros servicios generales, asegurándonos de que toda tu documentación esté actualizada, correcta y en regla, de forma segura y sin errores.</li>
             <li class="listaSeparador"><strong>Requisitos:</strong></li>
-            <li class="listaSeparador" id="requisitoLista">Refacturación de vehículos nacionales
+            <li class="listaSeparador" id="requisitoLista">Refacturación de vehículos
               <ul class="listaSubpuntos">
                 <li class="listaSeparador" id="requisitoListaSub">Escaneo profesional formato PDF en 600pp de identificación oficial.</li>
                 <li class="listaSeparador" id="requisitoListaSub">Escaneo profesional formato PDF en 600pp de la factura de origen.</li>
@@ -79,6 +79,7 @@
        <a href="../contacto.html"> <button class="btn btn-layered-3d btn-layered-3d--blue">Contacto</button></a>
             </section>
     </main>
+
 
 
     <footer class="footer">
@@ -133,8 +134,8 @@
               <h2 class="textoRedes">Síguenos en:</h2>
 
               <div>
-                <img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo">
-                <img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo">
+                <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
               </div>
               
           </div>
