--- a/servicios/tramitesForaneos.html
+++ b/servicios/tramitesForaneos.html
@@ -45,19 +45,79 @@
   </header>
     <div class="header-spacer"></div>
     <main>
-      <section class="SeccionInformacionServicio">
-        <img src="../assets/tramitesForaneosServicios.jpg" class="imagenServicios">
-        <div class="informacionServicio">
+      <section class="SeccionInformacionServicio" id="SeccionInformacionServicioValidaciones">
+        <img src="../assets/tramitesForaneosServicios.jpg" class="imagenServicios" id="imagenHorizontalServicios">
+        <div class="informacionServicio" id="informacionServicioValidaciones">
           <hr class="separadorServicios">
           <h1 class="tituloInformacionServicio">SERVICIOS</h1>
           <h2 class="subtituloInformacionServicio">Trámites Foráneos</h2>
           <ul class="descripcionInformacionServicio"> <li class="listaSeparador">Gestionamos trámites vehiculares provenientes de otros estados de manera rápida, segura y confiable. Contamos con presencia en Guerrero, Oaxaca, Michoacán, Veracruz, Chiapas, Puebla, San Luis Potosí, Estado de México, CDMX, entre otros, permitiéndonos ofrecerte un servicio amplio y eficiente.</li>
             <li class="listaSeparador"><strong>Realizamos:</strong></li>
-            <li class="listaSeparador" id="requisitoListaForaneos">Dotación de placas para vehículos nacionales.</li>
-            <li class="listaSeparador" id="requisitoListaForaneos">Dotación de placas para vehículos americanos legalizados con pedimento.</li>
-            <li class="listaSeparador" id="requisitoListaForaneos">Cambios de propietario para vehículos nacionales.</li>
-            <li class="listaSeparador" id="requisitoListaForaneos">Cambios de propietario para vehículos americanos.</li>
-            <li class="listaSeparador" id="lastElement">Nuestro equipo te asesora en cada paso para que tu trámite foráneo sea sencillo, minimizando tiempos de espera y garantizando que tu documentación esté siempre en regla.</li>
+              <li class="listaSeparador" id="incisoLista">Dotación de placas vehículos nacionales:
+                  <ul class="listaSubpuntos"> 
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de identificación oficial.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de la factura de origen.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Cuatro (4) fotografías legibles del vehículo.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Foto legible de la serie ubicada en el parabrisas.</li></ul>
+                    </li>
+              <li class="listaSeparador" id="incisoLista">Dotación de placas vehículo americanos legalizados con pedimento:
+                  <ul class="listaSubpuntos"> 
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de identificación oficial.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de:
+                      <ul class="listaSubpuntos"> 
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Titulo, anverso y reverso</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Pedimento (todas las hojas que contenga su pedimento)</li>
+                    </li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Cuatro (4) fotografías legibles del vehículo.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Foto legible de la serie ubicada en el parabrisas.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Características del vehículo:
+                      <ul class="listaSubpuntos" id="listaSubpuntosFlex"> 
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Marca</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Modelo </li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Año</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Color interior </li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Puertas </li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Tipo de combustible</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Color exterior</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Tracción 2x2 ó 4x4</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Transmisión </li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Asientos (tela o piel)</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Pasajeros</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Cilindros</li></ul></li></ul>
+                    </li>
+              <li class="listaSeparador" id="incisoLista"> Cambios de propietario vehículos nacionales:
+                  <ul class="listaSubpuntos"> 
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de identificación oficial.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de la factura de origen.</li>
+                    <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de la tarjeta de circulación ó del pago de refrendo.</li></ul>
+                  </li>
+
+                    <li class="listaSeparador" id="incisoLista">Cambios de propietario vehículos americanos:
+                      <ul class="listaSubpuntos"> 
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de identificación oficial.</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de:
+                          <ul class="listaSubpuntos"> 
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Titulo, anverso y reverso</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Pedimento (todas las hojas que contenga su pedimento)</li>
+                        </li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Cuatro (4) fotografías legibles del vehículo.</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Foto legible de la serie ubicada en el parabrisas.</li>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Características del vehículo:
+                          <ul class="listaSubpuntos" id="listaSubpuntosFlex"> 
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Marca</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Modelo </li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Año</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Color interior </li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Puertas </li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Tipo de combustible</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Color exterior</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Tracción 2x2 ó 4x4</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Transmisión </li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Asientos (tela o piel)</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Pasajeros</li>
+                            <li class="listaSeparador" id="requisitoListaSubPlus">Cilindros</li></ul></li></ul>
+                        <li class="listaSeparador" id="requisitoListaSubPlus">Escaneo profesional formato PDF en 600pp de la tarjeta de circulación ó del pago de refrendo.</li>
+                        </li>
           </ul>
         </div>
       </section>
@@ -125,8 +185,8 @@
               <h2 class="textoRedes">Síguenos en:</h2>
 
               <div>
-                <img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo">
-                <img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo">
+                <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
               </div>
               
           </div>
@@ -137,6 +197,7 @@
       <div class="copyrightField">
         <p class="textoCopyright"> <strong>Copyright</strong> © 2025 Santos Gestoría | <a href="../avisoPrivacidad.html" class="linkCopyright">Aviso de Privacidad</a> | Usted está sujeto a la <a href="https://policies.google.com/privacy" class="linkCopyright">Política de Privacidad</a> y los <a href="https://policies.google.com/terms" class="linkCopyright">Términos del Servicio de Google</a>.</p>      </div>
 </footer>
+
 
 
 </main>
