--- a/servicios/validaciones.html
+++ b/servicios/validaciones.html
@@ -83,8 +83,7 @@
                       <li class="listaSeparador" id="incisoLista">Validación vehículos nuevos (Que excedieron la fecha de 1 año después de la fecha de facturación y no fueron emplacados):
                   <ul class="listaSubpuntos"> 
                       <li class="listaSeparador" id="requisitoListaSub">Secuencia de facturas completa, última en original ó, en su defecto, factura original</li>
-                      <li class="listaSeparador" id="requisitoListaSub">En caso de que esté en financiamiento, anexar carta factura, original y vigente, no mayor a 30 días y la copia de la factura ó las secuencias de las facturas que tenga el vehículo.</li>
-                      <li class="listaSeparador" id="requisitoListaSub">Factura de importadora</li></ul>
+                      <li class="listaSeparador" id="requisitoListaSub">En caso de que esté en financiamiento, anexar carta factura, original y vigente, no mayor a 30 días y la copia de la factura ó las secuencias de las facturas que tenga el vehículo.</li></ul>
                     </li>
                       <li class="listaSeparador" id="incisoLista">Validación vehículos de siniestro nacionales:
                   <ul class="listaSubpuntos"> 
@@ -206,8 +205,8 @@
               <h2 class="textoRedes">Síguenos en:</h2>
 
               <div>
-                <img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo">
-                <img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo">
+                <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
               </div>
               
           </div>
