--- a/servicios/refrendo.html
+++ b/servicios/refrendo.html
@@ -51,21 +51,7 @@
           <h1 class="tituloInformacionServicio">SERVICIOS</h1>
           <h2 class="subtituloInformacionServicio">Refrendo</h2>
           <ul class="descripcionInformacionServicio"> <li class="listaSeparador">Realizamos tu trámite de refrendo vehicular de forma eficiente, evitando largas filas y tiempos de espera para que tu vehículo esté siempre en regla.</li>
-            <li class="listaSeparador"><strong>Requisitos:</strong></li>
-            <li class="listaSeparador" id="requisitoLista">Original de Identificación Oficial.<br>
-              <ul class="listaSubpuntos"> <li class="listaSeparador" id="requisitoListaSub">En caso de ser extranjero deberá presentar el pasaporte de su país y el FM1 o FM2 o FM3, depende el caso del contribuyente.</li></ul>
-            </li>
-            <li class="listaSeparador" id="requisitoLista">Comprobante de domicilio Original.
-              <ul class="listaSubpuntos">
-                <li class="listaSeparador" id="requisitoListaSub">Vigente, no mayor a 3 meses de antigüedad.</li>
-                <li class="listaSeparador" id="requisitoListaSub">Debe coincidir con todo el nombre completo de la identificación o todo el domicilio completo de la identificación.</li>
-                <li class="listaSeparador" id="requisitoListaSub">Comprobantes válidos, SIAPA Y CFE. Estado de cuenta bancario o de tienda departamental los cuales deben contar con el código QR.</li>
-                <li class="listaSeparador" id="requisitoListaSub">Estado de cuenta TELMEX.</li>
-                <li class="listaSeparador" id="requisitoListaSub">Servicios de telefonía en casa solo son válidas las facturas con código QR, no estados de cuenta simples.</li>
-                <li class="listaSeparador" id="requisitoListaSub">TELEFONIA MOVIL NO ES VÁLIDA.</li>
-            </ul></li>
-            <li class="listaSeparador" id="requisitoLista">CURP impresa.</li>
-            <li class="listaSeparador" id="requisitoLista">Conocer tipo de sangre.</li>
+            <li class="listaSeparador">Para consultar tu refrendo y hacer el pago, se requiere foto de la tarjeta de circulacion ó foto del recibo de pago de refrendo recientes</li>
           </ul>
         </div>
       </section>
@@ -132,8 +118,8 @@
               <h2 class="textoRedes">Síguenos en:</h2>
 
               <div>
-                <img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo">
-                <img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo">
+                <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
               </div>
               
           </div>
