--- a/contacto.html
+++ b/contacto.html
@@ -91,7 +91,8 @@
             <div class="iconosRedes">
 
                 <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="assets/facebookContacto.png" class="iconoRedesContacto" alt="Icono Facebook" ></a>
-               <a href="https://www.instagram.com/santosgestoriaautomotriz?igsh=Zmp0cXM0MHlyeG9x"><img src="assets/instagramContacto.png" class="iconoRedesContacto" alt="Icono Instagram" ></a>
+                <a href="https://www.instagram.com/santosgestoriaa"><img src="assets/instagramContacto.png" class="iconoRedesContacto" alt="Icono Instagram" ></a>
+                <a href="https://www.tiktok.com/@santos.gestoriaa?_t=ZS-8xunlRCezRt&_r=1"><img src="assets/tiktokContacto.png" class="iconoRedesContacto" alt="Icono Tiktok" ></a>
             </div>
         </div>
     </main>
@@ -149,7 +150,9 @@
 
               <div>
                 <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
-                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaa"><img src="assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
+                <a href="https://www.tiktok.com/@santos.gestoriaa?_t=ZS-8xunlRCezRt&_r=1"><img src="assets/tiktokIcon.svg" class="rssIcon" alt="Tiktok logo"></a>
+
               </div>
               
           </div>
