--- a/servicios/bajasTotales.html
+++ b/servicios/bajasTotales.html
@@ -127,7 +127,7 @@
 
               <div>
                 <a href="https://www.facebook.com/profile.php?id=61574843736715&mibextid=wwXIfr&mibextid=wwXIfr"><img src="../assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo"></a>
-                <a href="https://www.instagram.com/santosgestoriaautomotriz/#"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
+                <a href="https://www.instagram.com/santosgestoriaa"><img src="../assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo"></a>
               </div>
               
           </div>
